syntax = "proto3";

package hello;

option go_package = "proto;hello";

service Hello {
	rpc Call(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
	string name = 1;
}

message HelloResponse {
	string msg = 1;
}